--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@libsql/client": "^0.15.5",
     "@types/better-sqlite3": "^7.6.13",
     "axios": "^1.9.0",
     "better-sqlite3": "^11.9.1",
