--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "bun ./src/index.ts",
-    "start": "bun ./src/index.ts",
+    "start": "bun ./out/index.js",
     "lint": "bunx eslint .",
     "build":"bun build --entrypoints ./src/index.ts --outdir ./out --target bun"
   },
